syntax = "proto3";

package svcpb;

option go_package = "/svcpb";

message User {
    string username = 1;
}

message CreateUserRequest {
    string username = 1;
}

message CreateUserResponse {
    User user = 1;
}

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}

message Post {
    string title = 1;
    string content = 2;
}

message CreatePostRequest {
    Post post = 1;
}

message CreatePostResponse {
    Post post = 1;
}

service PostService {
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
}